Remove styles for .navbar-default div.navbar-collapse Could not figure out how to prevent these styles from showing through in mobile and desktop views

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -23,10 +23,10 @@
 
 .navbar-default div.navbar-collapse
 {
-    border-top: 2px solid black;
+/*    border-top: 2px solid black;
     box-shadow: none;
     background-color: yellow;
-}
+*/}
 
 #nav-list hr {
 	margin-top: 4px;
